# scala-rs-protoc-web

./: README.md
rust-backend-example/: Cargo.toml  README.md  devenv.nix  justfile
rust-backend-example/src/: main.rs
scala-embedded-example/: .gitignore  README.md  build.sbt  devenv.nix  justfile
scala-embedded-example/project/: scalapb.sbt
scala-embedded-example/src/main/protobuf/: addressbook.proto
scala-embedded-example/src/main/scala/com/example/: ProtoHooks.scala  ProtoLogic.scala
scala-embedded-example/src/test/scala/com/example/: ProtoLogicSpec.scala
